k8s/message-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: message-service
  name: message-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: message-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: message-service
    spec:
      containers:
        - env:
            - name: MODULE
              value: MESSAGES
          image: nodelabs-task-message-service:latest
          name: message-service
          ports:
            - containerPort: 5354
              protocol: TCP
          resources:
            requests:
              memory: "50Mi"
              cpu: "2m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          imagePullPolicy: Never
      restartPolicy: Always
status: {}
