k8s/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 5354
  selector:
    io.kompose.service: auth-service
status:
  loadBalancer: {}
