k8s/base-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: base-service
  name: base-service
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 5354
  selector:
    io.kompose.service: base-service
status:
  loadBalancer: {}
