k8s/conversation-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: conversation-service
  name: conversation-service
spec:
  ports:
    - name: "3003"
      port: 3003
      targetPort: 5354
  selector:
    io.kompose.service: conversation-service
status:
  loadBalancer: {}
