k8s/message-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: message-service
  name: message-service
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 5354
  selector:
    io.kompose.service: message-service
status:
  loadBalancer: {}
