k8s/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  ports:
    - name: "3004"
      port: 3004
      targetPort: 5354
  selector:
    io.kompose.service: user-service
status:
  loadBalancer: {}
